# pulse

./: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backtest/: data_pipeline.py  macro_features.parquet  market_data.db  model.py  rf_model.pkl  visualize_model.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: AssetChart.tsx  BacktestChart.tsx  CategoryCard.tsx  Dashboard.tsx  MacroSignals.tsx  ModelInterface.tsx  Sparkline.tsx  TickerRow.tsx  Tooltip.tsx
frontend/src/lib/: api.ts  format.ts  tooltips.ts
