[project]
name = "pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.34.0",
    "yfinance>=0.2.50",
]
